# Bachelorarbeit_waermepumpe

./: .gitignore  .tespytestMOD.py  GUI.py  MCI_HeatPump.py  README.md  compensation.py  mytest.py  parameter_waermepumpe_MCI.md  pyproject.toml  requirements.txt  result_old_calc.txt  structure.md
designstate/: connections.csv
designstate/components/: Compressor.csv  Condenser.csv  HeatExchanger.csv  SimpleHeatExchanger.csv  Valve.csv
designstate/design_state.json/: connections.csv
designstate/design_state.json/components/: Compressor.csv  CycleCloser.csv  HeatExchanger.csv  Valve.csv
frontend/: index.html  script.js  stylesheet.css
frontend/plots/: thermocycle05511011-5192-4118-8bde-4b5e2c54df69.html  thermocyclea9447fee-41b4-4738-8c3f-60aa5b342886.html
myloggings/: tespy.log.2025-03-24  tespy.log.2025-04-10  tespy.log.2025-04-11  tespy.log.2025-04-14  tespy.log.2025-04-17  tespy.log.2025-04-20  tespy.log.2025-04-28  tespy.log.2025-05-03  tespy.log.2025-05-04  tespy.log.2025-05-05  tespy.log.2025-05-06  tespy.log.2025-05-07  tespy.log.2025-05-08  tespy.log.2025-05-09  tespy.log.2025-05-10
system_design/: connections.csv
system_design/components/: Compressor.csv  Condenser.csv  CycleCloser.csv  HeatExchanger.csv  Pump.csv  SimpleHeatExchanger.csv  Valve.csv
webpage/: ihatejs.js  illustration.js  stylewebpage.css  webpage.html
